--- a/client/src/pages/home/home.css
+++ b/client/src/pages/home/home.css
@@ -1,4 +1,122 @@
 .home {
   width: 100%;
   background: #111827;
+  padding: 40px 0;
+}
+
+.intro {
+  position: relative;
+  width: 100%;
+  border-radius: 20px;
+  overflow: hidden;
+}
+
+.intro > img {
+  width: 100%;
+  object-fit: cover;
+}
+
+.intro::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.intro-content {
+  position: absolute;
+  top: 50%;
+  left: 0;
+  transform: translateY(-50%);
+  z-index: 1;
+  padding: 8%;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+
+.intro-content > h1 {
+  font-size: 60px;
+  display: flex;
+  flex-direction: column;
+}
+
+.intro-content > h1 > i {
+  font-style: normal;
+  color: #fff;
+}
+.intro-content > h1 > span {
+  color: #a5b4fc;
+}
+
+.intro-content > p {
+  max-width: 700px;
+  font-size: 20px;
+  color: rgb(199 210 254 / 1);
+}
+
+.intro-content > div {
+  display: flex;
+  align-items: center;
+  gap: 30px;
+}
+
+.intro-content > div > a {
+  width: 162px;
+  height: 50px;
+  font-size: 16px;
+  background: #fff;
+  color: #4338ca;
+  border-radius: 6px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.intro-content > div > :last-child {
+  background: #4338ca;
+  color: #fff;
+}
+
+.trusted {
+  text-align: center;
+  font-size: 18px;
+  color: #6b7280;
+  padding: 40px 20px;
+  font-weight: 600;
+  text-transform: uppercase;
+}
+
+.stats {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.stats > div {
+  width: 256px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-right: 1px solid #374151;
+  gap: 10px;
+  padding: 10px 0;
+}
+
+.stats > div:last-child {
+  border-right: none;
+}
+
+.stats > div > h1 {
+  font-size: 36px;
+  color: #a5b4fc;
+}
+
+.stats > div > p {
+  font-size: 18px;
+  color: #6b7280;
+  text-align: center;
 }
